// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@artifak/grid Grid should render 1`] = `
<DocumentFragment>
  <div
    class="sc-gsTCUz dmRtIA"
    display="grid"
  >
    <div
      class="sc-dlfnbm"
    >
      1
    </div>
    <div
      class="sc-dlfnbm"
    >
      2
    </div>
    <div
      class="sc-dlfnbm"
    >
      3
    </div>
    <div
      class="sc-dlfnbm"
    >
      4
    </div>
    <div
      class="sc-dlfnbm"
    >
      5
    </div>
    <div
      class="sc-dlfnbm"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;

exports[`@artifak/grid Grid should render grid-auto-columns style if no columnSize prop is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-gsTCUz ezSWul"
    data-testid="grid"
    display="grid"
  >
    <div
      class="sc-dlfnbm"
    >
      1
    </div>
    <div
      class="sc-dlfnbm"
    >
      2
    </div>
    <div
      class="sc-dlfnbm"
    >
      3
    </div>
    <div
      class="sc-dlfnbm"
    >
      4
    </div>
    <div
      class="sc-dlfnbm"
    >
      5
    </div>
    <div
      class="sc-dlfnbm"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;

exports[`@artifak/grid Grid should render gridGap style if a value is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-gsTCUz bJPZbK"
    data-testid="grid"
    display="grid"
  >
    <div
      class="sc-dlfnbm"
    >
      1
    </div>
    <div
      class="sc-dlfnbm"
    >
      2
    </div>
    <div
      class="sc-dlfnbm"
    >
      3
    </div>
    <div
      class="sc-dlfnbm"
    >
      4
    </div>
    <div
      class="sc-dlfnbm"
    >
      5
    </div>
    <div
      class="sc-dlfnbm"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;
